feat(meca): add default arguments to pygmt meca

--- a/pygmt_meca_demo.ipynb
+++ b/pygmt_meca_demo.ipynb
@@ -46,12 +46,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d23c5ed226c04c15baea3250a5e63d1a",
+       "model_id": "fb71600e8bb143309652b9f62f1d8e83",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=180, description='strike', max=360), IntSlider(value=45, description='di…"
+       "interactive(children=(IntSlider(value=270, description='strike', max=360), IntSlider(value=90, description='di…"
       ]
      },
      "metadata": {},
@@ -59,8 +59,8 @@
     }
    ],
    "source": [
-    "@interact(strike=(0,360), dip=(0,90), rake=(-180,180), tcolor_r=(0,255), tcolor_g=(0,255), tcolor_b=(0,255), title='Simple Focal Mechanism')\n",
-    "def pygmt_simplemeca(strike,dip,rake,tcolor_r,tcolor_g,tcolor_b,title):\n",
+    "@interact(strike=(0,360), dip=(0,90), rake=(-180,180), color_r=(0,255), color_g=(0,255), color_b=(0,255), title='Simple Focal Mechanism')\n",
+    "def pygmt_simplemeca(strike=270,dip=90,rake=0,color_r=0,color_g=0,color_b=0,title='Simple Focal Mechanism'):\n",
     "    fig = pygmt.Figure()\n",
     "    fig.basemap(\n",
     "        region=[-1, 1, -1, 1], \n",
@@ -68,7 +68,7 @@
     "        frame=[f'+n+t\"{title}\"']\n",
     "    )\n",
     "    focal_mechanism = dict(strike=strike, dip=dip, rake=rake, magnitude=3)\n",
-    "    fig.meca(focal_mechanism, scale=\"6c\", longitude=0, latitude=0, depth=0, G=f'{tcolor_r}/{tcolor_g}/{tcolor_b}')\n",
+    "    fig.meca(focal_mechanism, scale=\"6c\", longitude=0, latitude=0, depth=0, G=f'{color_r}/{color_g}/{color_b}')\n",
     "    fig.text(x=0, y=0, text=f'{strike}/{dip}/{rake}', offset='0/-2.5',font='8p')\n",
     "    fig.show()"
    ]
